# Sirat-Al-Mustaqeem-AI

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  prettier.config.mjs  turbo.json
.github/workflows/: backend.yml
apps/api/: README.md  package.json  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/middleware/: auth.py  rate_limit.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: auth.py  chat.py  health.py
apps/api/app/services/: conversation.py  llm_router.py  supabase.py
apps/api/app/utils/: streaming.py
apps/mobile/: README.md
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: chat-api.ts  env.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: logging.py
backend/app/middleware/: auth.py  rate_limit.py  request_logging.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  chat.py  health.py
backend/app/services/: conversation.py  search.py  supabase.py
backend/app/services/ingestion/: chunker.py  embedder.py  extractor.py  pipeline.py
backend/app/services/llm/: base.py  gemini.py  groq.py  openai_compatible.py  openrouter.py  prompts.py  router.py
backend/app/utils/: citations.py  streaming.py
backend/migrations/: 001_conversations.sql  002_documents_ingestion.sql  003_match_chunks.sql  004_resize_embedding.sql
docs/: CHANGELOG.md  CONTEXT.md  DECISIONS.md
docs/services/: backend.md  frontend.md  shared.md  web.md
frontend/: README.md
mobile/: README.md
(+23 files in other folders)
