[project]
name = "sirat-backend"
version = "0.1.0"
description = "FastAPI backend for Sirat Al Mustaqeem AI."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "httpx>=0.28.1",
  "pyjwt>=2.10.1",
  "cryptography>=44.0.0",
  "openai>=1.59.7",
  "sse-starlette>=2.2.1",
  "pypdf>=4.0.0",
  "python-docx>=1.1.2",
  "pytesseract>=0.3.13",
  "chardet>=5.2.0",
  "google-generativeai>=0.8.3",
  "Pillow>=11.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pytesseract", "google.generativeai"]
ignore_missing_imports = true

[tool.fastapi]
app = "app.main:app"
