[project]
name = "sirat-api"
version = "0.0.0"
description = "FastAPI backend for Sirat Al Mustaqeem AI."
requires-python = ">=3.12,<3.13"
dependencies = [
  "anyio>=4.8.0",
  "asyncpg>=0.30.0",
  "cryptography>=44.0.0",
  "fastapi>=0.115.6",
  "google-generativeai>=0.8.3",
  "httpx>=0.28.1",
  "openai>=1.59.7",
  "pyjwt>=2.10.1",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "sse-starlette>=2.2.1",
  "sqlalchemy[asyncio]>=2.0.37",
  "supabase>=2.11.0",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "mypy>=1.14.1",
  "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
